[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/Naves/Player/player_orange.png" type="Texture" id=1]
[ext_resource path="res://Juego/Proyectiles/Laser/LaserBeam2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Naves/Player/MaterialFisico.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Naves/Player/Player.gd" type="Script" id=5]
[ext_resource path="res://Juego/Naves/Player/Estela/Estela.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/Naves/Player/Motor/motor.ogg" type="AudioStream" id=7]
[ext_resource path="res://Juego/Naves/Player/Motor/Motor.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 37.054

[node name="Player" type="RigidBody2D"]
z_index = 50
z_as_relative = false
physics_material_override = ExtResource( 3 )
linear_damp = 1.0
angular_damp = 4.0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Canion" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.891907, 0 )

[node name="PuntoIzquierdo" parent="Canion" index="0"]
position = Vector2( 0, 33 )

[node name="PuntoDerecho" parent="Canion" index="1"]
position = Vector2( 0, -33 )

[node name="LaserBeam2D" parent="." instance=ExtResource( 2 )]

[node name="EstelaPuntoInicio" type="Position2D" parent="."]
position = Vector2( -9, 0 )

[node name="Estela" parent="EstelaPuntoInicio" instance=ExtResource( 6 )]
points = PoolVector2Array( 0, 0, 60, 0 )
width = 50.0
is_emitting = true
lifetime = 0.6
max_points = 150
target_path = NodePath("..")

[node name="MotorSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -8.099
bus = "SFX"
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="MotorSFX"]

[editable path="Canion"]
